--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to RCE's personal website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
       <nav>
-        <img src="./assets/welcome-svgrepo-com.svg" alt="welcome-svgrepo-com" />
+        <img
+          src="./assets/welcome-svgrepo-com.svg"
+          alt="welcome-svgrepo-com"
+          class="logo"
+        />
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#github">Github</a></li>
