--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <section>
       <nav>
-        <img
-          src="./assets/welcome-svgrepo-com.svg"
-          alt="welcome-svgrepo-com"
-          class="logo"
-        />
+        <div class="nav1div">
+          <img src="./assets/monke.png" alt="monkey_logo" class="logo" />
+          <h1>Welcome!</h1>
+        </div>
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#github">Github</a></li>
@@ -30,12 +29,14 @@
             <a href="https://www.svgrepo.com" target="_blank">svgrepo.com</a>
           </h3>
         </div>
-        <figure>
-          <img
-            src="./assets/coding-html-svgrepo-com.svg"
-            alt="coding-html-svgrepo-com"
-          />
-        </figure>
+        <div>
+          <figure>
+            <!--            <img
+              src="./assets/coding-html-svgrepo-com.svg"
+              alt="coding-html-svgrepo-com"
+           /> -->
+          </figure>
+        </div>
       </header>
     </section>
 
