--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
       </nav>
       <header>
         <div>
-          <h1>Welcome to my website</h1>
-          <p>Still learning the basics of web development</p>
-          <h3>
-            Icons by
-            <a href="https://www.svgrepo.com" target="_blank">svgrepo.com</a>
-          </h3>
+          <h1>Hello!</h1>
+          <br />
+          <p>
+            I am a 45 year old Computer Science graduate with background on C
+            programming languange and Foxpro DOS Programming.
+          </p>
+          <br />
+          <p>
+            I am now trying my hand on basic HTML,CSS and Javascript with the
+            intention of learning Full Stack web development as I progress in
+            this new endeavour.
+          </p>
         </div>
         <div>
           <figure>
-            <!--            <img
-              src="./assets/coding-html-svgrepo-com.svg"
-              alt="coding-html-svgrepo-com"
-           /> -->
+            <img src="./assets/sorskowd.jpg" alt="code" class="logoheader" />
           </figure>
         </div>
       </header>
