--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
           <img src="./assets/monke.png" alt="monkey_logo" class="logo" />
           <h1>Welcome!</h1>
         </div>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#github">Github</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <ul class="nav1ul">
+          <li class="nav1li"><a href="#about">About</a></li>
+          <li class="nav1li"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
       <header>
         <div>
-          <h1>Hello!</h1>
+          <h1>Hello,</h1>
           <br />
           <p>
             I am a 45 year old Computer Science graduate with background on C
-            programming languange and Foxpro DOS Programming.
+            programming languange and Foxpro MS-DOS programming.
           </p>
           <br />
           <p>
-            I am now trying my hand on basic HTML,CSS and Javascript with the
+            Currently trying my hand on basic HTML,CSS and Javascript with the
             intention of learning Full Stack web development as I progress in
             this new endeavour.
           </p>
@@ -45,30 +44,41 @@
 
     <main>
       <section id="about">
-        <h2>About</h2>
         <div>
-          <p>A middle aged kid trying to learn web applications development</p>
-        </div>
-      </section>
-      <figure>
-        <img
-          src="./assets/user-programming-language-svgrepo-com.svg"
-          alt="user-programming-language-svgrepo-com"
-        />
-      </figure>
+          <h2>About</h2>
+          <br />
+          <p>Born and currently residing in the Philippines.</p>
+          <br />
+          <h3>Education</h3>
+          <ul class="edulist">
+            <li>Bachelor of Science in Computer Science</li>
+          </ul>
+          <br />
 
-      <section id="github">
-        <h2>Github</h2>
-        <figure>
-          <a href="https://github.com/m4ndr4ke" target="_blank">
-            <img
-              src="./assets/github-svgrepo-com.svg"
-              alt="github-svgrepo-com"
-            />
-          </a>
-        </figure>
-        <div>
-          <p>Not that much happening, but i'm trying to be active.</p>
+          <h3>Specialization Courses</h3>
+          <ul class="edulist">
+            <li>
+              <a
+                href="https://coursera.org/share/84c3fcb9a5a0469ce7f2a1d3359917c9"
+                target="_blank"
+                >Building Web Applications in PHP</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://coursera.org/share/e4677e1b75a466d928799dfb35bec8b7"
+                target="_blank"
+                >Building Database Applications in PHP</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://coursera.org/share/2c4edbd48385c0cae30343c6ccc02d74"
+                target="_blank"
+                >Introduction to Structured Query Language (SQL)</a
+              >
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -96,7 +106,6 @@
     <footer>
       <div>
         <a href="#about">About</a>
-        <a href="#github">Github</a>
         <a href="#contact">Contact</a>
       </div>
       <p>Copyright &copy m4ndr4ke</p>
