--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <section>
-      <nav>
+      <nav class="navmain">
         <div class="nav1div">
           <img src="./assets/monke.png" alt="monkey_logo" class="logo" />
+
           <h1>Welcome!</h1>
         </div>
         <ul class="nav1ul">
@@ -19,6 +20,7 @@
           <li class="nav1li"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
       <header>
         <div>
           <h1>Hello,</h1>
