--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
             intention of learning Full Stack web development as I progress in
             this new endeavour.
           </p>
+          <br />
         </div>
         <div>
-          <figure>
-            <img src="./assets/sorskowd.jpg" alt="code" class="logoheader" />
-          </figure>
+          <!-- <figure> -->
+          <img src="./assets/sorskowd.jpg" alt="code" class="logoheader" />
+          <!--</figure> -->
         </div>
       </header>
     </section>
