--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
             this new endeavour.
           </p>
           <br />
+          <p>
+            This site is a work in progress. I will try improve upon It as I
+            learn new things.
+          </p>
+          <br />
         </div>
-        <div>
+        <div class="divimg">
           <!-- <figure> -->
           <img src="./assets/sorskowd.jpg" alt="code" class="logoheader" />
           <!--</figure> -->
