--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <h1>Welcome!</h1>
         </div>
         <ul class="nav1ul">
-          <li class="nav1li"><a href="#education">Education</a></li>
-          <li class="nav1li"><a href="#contact">Contact</a></li>
+          <li class="nav1li">
+            <a href="#education" class="anav1li">Education</a>
+          </li>
+          <li class="nav1li"><a href="#contact" class="anav1li">Contact</a></li>
         </ul>
       </nav>
 
@@ -127,8 +129,8 @@
     <footer>
       <img src="./assets/monke.png" alt="monkey_logo" class="logo" />
       <div>
-        <a href="#education">Education</a>
-        <a href="#contact">Contact</a>
+        <a href="#education" class="anav1li" id="afooter">Education</a>
+        <a href="#contact" class="anav1li" id="afooter">Contact</a>
       </div>
       <p>Copyright &copy m4ndr4ke</p>
     </footer>
